--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
     "start": "node dist/index.js",
-    "start2": "ts-node src/index.ts"
+    "start2": "ts-node src/index.ts",
+    "create:migration": "mikro-orm migration:create"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "@mikro-orm/migrations": "^4.5.0",
     "@mikro-orm/postgresql": "^4.5.0",
     "apollo-server-express": "^2.22.2",
+    "argon2": "^0.27.2",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "pg": "^8.5.1",
