--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "@mikro-orm/postgresql": "^4.5.0",
     "apollo-server-express": "^2.22.2",
     "argon2": "^0.27.2",
-    "connect-redis": "^5.1.0",
+    "class-validator": "^0.13.1",
+    "connect-redis": "^6.0.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "graphql": "^15.5.0",
+    "express-session": "^1.17.2",
+    "graphql": "^15.6.0",
     "pg": "^8.5.1",
-    "redis": "^3.1.1",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
     "typescript": "^4.2.3"
